[project]
name = "erpy"
version = "0.1.2alpha1"
authors = [
  { name="Liam Strand", email="strandliam@gmail.com" },
  { name="Michael Daniels", email="michael.daniels618738@tufts.edu" },

]
description = "Leverages the existing Term package to implement a simple Erlang port driver that communicates over standard input and output."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mdaniels5757/erpy"
Issues = "https://github.com/mdaniels5757/erpy/issues"
Repository = "https://github.com/mdaniels5757/erpy"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
